httpd-ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Ec2 with httpd already installed

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: httpec202
  NewImageID:   
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  HttpServer:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
          commands:
            01_create_index:
              command: "echo '<h1>Hello all from Shreyash R./ I have use clf init and not a user data</h1>' > /var/www/html/index.html"
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref NewImageID
      KeyName: !Ref KeyName 
      SecurityGroups:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource HttpServer --region ${AWS::Region}
      Tags:
        - Key: Name
          Value: Http-server-01

Outputs:
  InstanceID: 
    Value: !Ref HttpServer
  PublicIPofEc2:
    Value: !GetAtt HttpServer.PublicIp
  WebsiteURL:
    Value: !Sub "http://${HttpServer.PublicIp}"
